--- a/shard.yml
+++ b/shard.yml
@@ -6,14 +6,16 @@ authors:
 
 targets:
   bot:
-	main: src/bot.cr
+    main: src/bot.cr
 
 dependencies:
   discordcr:
-	github: shardlab/discordcr
+    github: shardlab/discordcr
   redis:
-	github: stefanwille/crystal-redis
-	version: ~> 2.7.0
+    github: stefanwille/crystal-redis
+    version: ~> 2.7.0
+  hardware:
+    github: crystal-community/hardware
 
 crystal: 1.0.0
 
