--- a/site/package.json
+++ b/site/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "am_site",
-  "version": "1.0.0",
+  "name": "am_requiem_site",
+  "version": "0.0.1",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Hot_kota",
-  "license": "Apache-2.0",
+  "author": "hot_kota",
+  "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.3"
   }
 }
